# d2l-zh-marimo

./: .gitignore  README.md  TERMINOLOGY.py  index.py  pyproject.toml
chapter_appendix-tools-for-deep-learning/: aws.py  contributing.py  d2l.py  index.py  jupyter.py  sagemaker.py  selecting-servers-gpus.py
chapter_attention-mechanisms/: attention-cues.py  attention-scoring-functions.py  bahdanau-attention.py  index.py  multihead-attention.py  nadaraya-waston.py  self-attention-and-positional-encoding.py  transformer.py
chapter_computational-performance/: async-computation.py  auto-parallelism.py  hardware.py  hybridize.py  index.py  multiple-gpus-concise.py  multiple-gpus.py  parameterserver.py
chapter_computer-vision/: anchor.py  bounding-box.py  fcn.py  fine-tuning.py  image-augmentation.py  index.py  kaggle-cifar10.py  kaggle-dog.py  multiscale-object-detection.py  neural-style.py  object-detection-dataset.py  rcnn.py  semantic-segmentation-and-dataset.py  ssd.py  transposed-conv.py
chapter_convolutional-modern/: alexnet.py  batch-norm.py  densenet.py  googlenet.py  index.py  nin.py  resnet.py  vgg.py
chapter_convolutional-neural-networks/: channels.py  conv-layer.py  index.py  lenet.py  padding-and-strides.py  pooling.py  why-conv.py
chapter_deep-learning-computation/: custom-layer.py  deferred-init.py  index.py  model-construction.py  parameters.py  read-write.py  use-gpu.py
chapter_installation/: index.py
chapter_introduction/: index.py
chapter_linear-networks/: image-classification-dataset.py  index.py  linear-regression-concise.py  (+5 more)
(+71 files in other folders)
